--- a/src/main.css
+++ b/src/main.css
@@ -4,6 +4,11 @@
     --color-bg: #333339;
 }
 
+.bg1 { background: #fde68a; }
+.bg2 { background: #bfdbfe; }
+.bg3 { background: #fecaca; }
+.bg4 { background: #ddd6fe; }
+
 body {
     @apply m-0 p-0;
 }
